<resources>
    <string name="app_name">RUBIX</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="button_recieving">Recieving</string>
    <string name="button_transit">Transit Service</string>
    <string name="btn_inguiry">Inventory Inguiry</string>
    <string name="button_change">Change Location</string>
    <string name="button_picking">Picking</string>
    <string name="btn_shipping">Shipping</string>
    <string name="btn_return">Return Recieving</string>
    <string name="btn_counting">Stock Counting</string>
    <string name="config_pass">JkvAdoNipomE+uqSPvqiH2f00Qo=</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
