<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main"
    android:background="@color/bg_home"
    android:orientation="horizontal"
    android:id="@+id/content">

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/circle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="Warehouse Management System"
            android:textColor="#ffff"
            android:padding="16dp"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <Button
                android:id="@+id/btn_recieving"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:background="@drawable/oval"
                android:text="@string/button_recieving"
                android:drawableLeft="@mipmap/ic_rubix_icon_round"
                android:textSize="20sp"
                android:layout_margin="10dp"/>

            <Button
                android:id="@+id/btn_transit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:background="@drawable/oval"
                android:text="@string/button_transit"
                android:drawableLeft="@mipmap/ic_rubix_icon_round"
                android:textSize="20sp"
                android:layout_margin="10dp"/>

            <Button
                android:id="@+id/btn_inguiry"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:background="@drawable/oval"
                android:text="@string/btn_inguiry"
                android:drawableLeft="@mipmap/ic_rubix_icon_round"
                android:textSize="20sp"
                android:layout_margin="10dp"/>
            <Button
                android:id="@+id/btn_change"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:background="@drawable/oval"
                android:text="@string/button_change"
                android:drawableLeft="@mipmap/ic_rubix_icon_round"
                android:textSize="20sp"
                android:layout_margin="10dp"/>

            <Button
                android:id="@+id/btn_picking"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:background="@drawable/oval"
                android:text="@string/button_picking"
                android:drawableLeft="@mipmap/ic_rubix_icon_round"
                android:textSize="20sp"
                android:layout_margin="10dp"/>

            <Button
                android:id="@+id/btn_shipping"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:background="@drawable/oval"
                android:text="@string/btn_shipping"
                android:drawableLeft="@mipmap/ic_rubix_icon_round"
                android:textSize="20sp"
                android:layout_margin="10dp"/>

            <Button
                android:id="@+id/btn_return"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:background="@drawable/oval"
                android:text="@string/btn_return"
                android:drawableLeft="@mipmap/ic_rubix_icon_round"
                android:textSize="20sp"
                android:layout_margin="10dp"/>
            <Button
                android:id="@+id/btn_counting"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:background="@drawable/oval"
                android:text="@string/btn_counting"
                android:drawableLeft="@mipmap/ic_rubix_icon_round"
                android:textSize="20sp"
                android:layout_margin="10dp"/>

        </LinearLayout>
    </ScrollView>



</RelativeLayout>